# project-zeno-data-infra

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose-api.yml  grasslands_areas_gadm_2000-2022.ipynb  mapspam.ipynb  newrelic.ini  prefect.yaml  pyproject.toml
api/: Dockerfile  README.md  docker-compose-api.yml  docker-compose.yml  newrelic.ini  pyproject.toml  requirements.txt
api/app/: analysis.py  dependencies.py  main.py  query.py
api/app/analysis/common/: analysis.py  geodesic_area.py
api/app/analysis/dist_alerts/: analysis.py  query.py
api/app/analysis/grasslands/: analysis.py  query.py
api/app/analysis/integrated_alerts/: analysis.py  query.py
api/app/analysis/natural_lands/: analysis.py  query.py
api/app/domain/analyzers/: analyzer.py  carbon_flux_analyzer.py  deforestation_emissions_by_crop.py  deforestation_luc_emissions_factor_analyzer.py  dist_alerts_analyzer.py  dummy_carbon_flux_analyzer.py  dummy_land_cover_change_analyzer.py  dummy_tree_cover_analyzer.py  dummy_tree_cover_gain_analyzer.py  grasslands_analyzer.py  integrated_alerts_analyzer.py  land_cover_change_analyzer.py  land_cover_composition_analyzer.py  land_ghg_inventory_analyzer.py  natural_lands_analyzer.py  tree_cover_analyzer.py  tree_cover_gain_analyzer.py  tree_cover_loss_analyzer.py  zonal_statistics_analyzer.py
api/app/domain/compute_engines/: compute_engine.py  dask_client_router.py
api/app/domain/models/: analysis.py  area_of_interest.py  dataset.py  environment.py
api/app/domain/repositories/: analysis_repository.py  data_api_aoi_geometry_repository.py  zarr_dataset_repository.py
api/app/infrastructure/external_services/: compute_service.py  dask_aoi_map_service.py  data_api_compute_service.py  duck_db_query_service.py
api/app/infrastructure/persistence/: aws_dynamodb_s3_analysis_repository.py  file_resource.py  file_system_analysis_repository.py
api/app/models/common/: analysis.py  areas_of_interest.py  base.py  query.py
api/app/models/land_change/: carbon_flux.py  deforestation_emissions_by_crop.py  deforestation_luc_emissions_factor.py  dist_alerts.py  forest.py  grasslands.py  integrated_alerts.py  land_cover.py  land_cover_change.py  land_cover_composition.py  land_ghg_inventory.py  natural_lands.py  tree_cover.py  tree_cover_gain.py  tree_cover_loss.py
api/app/routers/: common_analytics.py  common_auth.py  dist_alerts.py
api/app/routers/land_change/: __init__.py
api/app/use_cases/analysis/: analysis_service.py
api/copilot/: .workspace
api/copilot/api/: manifest.yml
api/dask_cluster/: start_cluster.py
api/test/integration/: __init__.py  conftest.py  test_carbon.py  test_dist_analytics.py  test_land_cover_change.py  test_land_cover_composition.py  test_land_ghg_inventory.py  test_nl_analytics.py
api/test/performance_tests/: locustfile.py  many_aoi_locustfile.py  zeno-analytics-requests.json
api/test/unit/: conftest.py  test_dependencies.py  test_dist_analytics.py  test_grasslands_analysis.py  test_integrated_alerts_analytics.py  test_zonal_statistics.py
api/test/unit/analysis/: test_analysis_common.py
api/test/unit/models/: test_dataset.py
api/test/unit/use_cases/: test_land_cover_change.py  test_tree_cover_service.py
pipelines/: Dockerfile  README.md  dist.py  dist_flow.py  globals.py  pyproject.toml  run_tcl_update.py  run_updates.py  utils.py
pipelines/afolu/: qc.py  reference.py  stages.py
pipelines/afolu/prefect_flows/: afolu_flow.py  afolu_tasks.py
pipelines/afolu_vegetation/: land_state_categories.py  qc.py  reference.py  stages.py
pipelines/afolu_vegetation/prefect_flows/: afolu_vegetation_flow.py  afolu_vegetation_tasks.py
pipelines/carbon_flux/: create_zarr.py  stages.py
pipelines/carbon_flux/prefect_flows/: carbon.py  carbon_flow.py  carbon_tasks.py
pipelines/disturbance/: check_for_new_alerts.py  create_zarr.py  gadm_dist_alerts.py  gadm_dist_alerts_by_driver.py  gadm_dist_alerts_by_grasslands.py  gadm_dist_alerts_by_natural_lands.py  stages.py  validate_dist_input.py  validate_zonal_statistics.py
pipelines/disturbance/prefect_flows/: __init__.py  dist_common_tasks.py  dist_flow.py  gadm_dist_alerts.py  gadm_dist_alerts_by_drivers.py  gadm_dist_alerts_by_grasslands.py  gadm_dist_alerts_by_land_cover.py  gadm_dist_alerts_by_natural_lands.py
pipelines/grasslands/: stages.py
pipelines/grasslands/prefect_flows/: graslands_tasks.py  grasslands_flow.py  grasslands_tasks.py
pipelines/intdist/: create_zarr.py  stages.py
pipelines/intdist/prefect_flows/: gadm_intdist_alerts.py  intdist_common_tasks.py  intdist_flow.py
pipelines/integrated_alerts/: create_zarr.py  qc.py  stages.py
pipelines/integrated_alerts/prefect_flows/: __init__.py  gadm_integrated_alerts.py  integrated_alerts_common_tasks.py  integrated_alerts_flow.py  integrated_alerts_tasks.py
pipelines/land_ghg_inventory/: land_state_categories.py  qc.py  reference.py  stages.py
pipelines/land_ghg_inventory/prefect_flows/: land_ghg_inventory_flow.py  land_ghg_inventory_tasks.py
pipelines/natural_lands/: nl_flow.py  stages.py
pipelines/natural_lands/prefect_flows/: nl_flow.py  nl_tasks.py
pipelines/prefect_flows/: common_stages.py  common_tasks.py
pipelines/repositories/: google_earth_engine_dataset_repository.py  qc_feature_repository.py
pipelines/test/integration/afolu/: test_afolu_flow.py
pipelines/test/integration/afolu_vegetation/: test_afolu_vegetation_flow.py
pipelines/test/unit/: test_common_stages_create_zarr_from_tiles.py  test_dist_check_new_alerts.py  test_dist_create_zarr.py  test_dist_postprocess.py  test_run_updates.py
pipelines/tree_cover_loss/: create_zarr.py  stages.py
pipelines/tree_cover_loss/prefect_flows/: create_zarrs_flow.py  tcl.py  tcl_flow.py  tcl_tasks.py
(+193 files in other folders)
