[project]
name = "zeno-data-analytics"
version = "0.1.0"
description = "Data analytics app for Zeno"
requires-python = ">=3.12"
dependencies = [
    "boto3",
    "coiled",
    "dask[array,dataframe,distributed,diagnostics]",
    "duckdb>=1.3.1",
    "fastparquet",
    "flox",
    "fsspec",
    "numba>=0.61.2",
    "numbagg",
    "numpy",
    "pandas",
    "prefect",
    "rasterio==1.4.3",
    "rioxarray",
    "s3fs",
    "shapely>=2.1.1",
    "sparse",
    "xarray",
    "zarr",
    "duckdb",
    "shapely"
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pipelines"]

[tool.uv.workspace]
members = [
    "project-zeno-data-infra",
]

[dependency-groups]
development = [
    "pandera>=0.24.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]
