[project]
name = "zeno-data-analytics-api"
version = "0.1.0"
description = "Data analytics API for Zeno"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=15.1.0",
    "boto3",
    "coiled",
    "dask[array,dataframe,distributed,diagnostics]",
    "dask-cloudprovider[aws]",
    "duckdb>=1.3.2",
    "fastparquet",
    "flox",
    "fsspec",
    "geopandas",
    "newrelic",
    "numba>=0.61.2",
    "numbagg",
    "numpy",
    "pandas",
    "pandera[pandas]",
    "prefect",
    "prefect-coiled>=0.0.4",
    "pyinstrument",
    "python-json-logger",
    "rasterio==1.4.3",
    "rioxarray",
    "s3fs",
    "shapely>=2.1.1",
    "sparse",
    "xarray",
    "zarr"
]

[tool.isort]
profile = "black"

[tool.uv.workspace]
members = [
    "project-zeno-data-infra",
]

[dependency-groups]
dev = [
    "locust>=2.38.1",
    "moto[server]>=5.1.11",
    "pandera>=0.24.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0"
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration"
]
